[package]
name = "maze"
version = "0.0.1"
authors = [ "Boris Faure <billiob@gmail.com>" ]
license = "BSD-2-Clause"

[dependencies]
docopt = "*"
rand = "*"
image = "*"
debug_macros = {path = "/home/billiob/dev/rust/debug_macros/"}
color_scaling = {path = "/home/billiob/dev/rust/color_scaling/"}
read_color = "*"
