[package]
name = "maze"
version = "0.1.0"
authors = [ "Boris Faure <billiob@gmail.com>" ]
license = "BSD-2-Clause"
edition = '2021'

[dependencies]
docopt = "1.1"
rand = { version = "0.8", features = ["std", "std_rng"] }
color_scaling = "0.0.5"
image = "0.23"
gif = "0.11"
debug_macros = "*"
read_color = "1"
